apps/api-service/deploy-manifest/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
        - name: api-service
          image: api-service:alpha
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
            - containerPort: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-service-ingress
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
    - host: api-service.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: kube-system
spec:
  type: ExternalName
  externalName: api-service.default.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
    app: api-service
---
apiVersion: v1
kind: Service
metadata:
  name: api-service-ws
  namespace: default
spec:
  ports:
    - name: http
      port: 8001
      targetPort: 8001
      protocol: TCP
  type: NodePort
  selector:
    app: api-service
